// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Figure with a caption should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c2 {
  display: block;
  width: 100%;
}

.c4 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  top: 0;
}

.c3 {
  background-color: #D5D0CD;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 0.5rem;
  width: 100%;
}

.c1 {
  position: relative;
}

@media (min-width:37.5em) {
  .c3 {
    padding: 0.5rem 1rem;
  }
}

<figure
  className="c0"
>
  <div
    className="c1"
  >
    <img
      alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
      className="c2"
      src="https://ichef.bbci.co.uk/news/640/cpsprodpb/E7DB/production/_101655395_paulineclayton.jpg"
    />
  </div>
  <figcaption
    className="c3"
  >
    <span
      className="c4"
    >
      Image caption, 
    </span>
    This is a caption
  </figcaption>
</figure>
`;

exports[`Figure with caption and non-BBC copyright should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c2 {
  display: block;
  width: 100%;
}

.c5 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  top: 0;
}

.c4 {
  background-color: #D5D0CD;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 0.5rem;
  width: 100%;
}

.c3 {
  font-size: 0.75em;
  line-height: 1em;
  background-color: #222222;
  color: #FFFFFF;
  padding: 0.5rem;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  right: 0;
}

.c1 {
  position: relative;
}

@media (min-width:37.5em) {
  .c4 {
    padding: 0.5rem 1rem;
  }
}

<figure
  className="c0"
>
  <div
    className="c1"
  >
    <img
      alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
      className="c2"
      src="https://ichef.bbci.co.uk/news/640/cpsprodpb/E7DB/production/_101655395_paulineclayton.jpg"
    />
    <span
      className="c3"
    >
      © 
      Getty Images
    </span>
  </div>
  <figcaption
    className="c4"
  >
    <span
      className="c5"
    >
      Image caption, 
    </span>
    This is a caption
  </figcaption>
</figure>
`;

exports[`Figure with non-BBC copyright should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c2 {
  display: block;
  width: 100%;
}

.c3 {
  font-size: 0.75em;
  line-height: 1em;
  background-color: #222222;
  color: #FFFFFF;
  padding: 0.5rem;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  right: 0;
}

.c1 {
  position: relative;
}

<figure
  className="c0"
>
  <div
    className="c1"
  >
    <img
      alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
      className="c2"
      src="https://ichef.bbci.co.uk/news/640/cpsprodpb/E7DB/production/_101655395_paulineclayton.jpg"
    />
    <span
      className="c3"
    >
      © 
      Getty Images
    </span>
  </div>
</figure>
`;

exports[`Figure without a caption should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c2 {
  display: block;
  width: 100%;
}

.c1 {
  position: relative;
}

<figure
  className="c0"
>
  <div
    className="c1"
  >
    <img
      alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
      className="c2"
      src="https://ichef.bbci.co.uk/news/640/cpsprodpb/E7DB/production/_101655395_paulineclayton.jpg"
    />
  </div>
</figure>
`;
